Page MenuHome GnuPG

libassuan: Add assuan_control function
Closed, ResolvedPublic

Description

For system call clamp support by libgpg-error, stability-wise, it's better to have an explicit control of (re-)initialization, like libgcrypt's GCRYCTL_REINIT_SYSCALL_CLAMP.

assuan_control could be simpler than gcry_control, having variable size arguments is overkill/not-needed, plain (void *)arg is OK.

Revisions and Commits