New function: assuan_control.

* src/assuan.c (assuan_control): New.
* src/assuan.h.in (ASSUAN_CONTROL_REINIT_SYSCALL_CLAMP): New.
(assuan_control): New.
* src/libassuan.def (assuan_control): Add.
* src/libassuan.vers (assuan_control): Add.

--

GnuPG-bug-id: 6625
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>